troca lista por tabela

--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
     <input type="number" id="age" placeholder="idade" >
   </label>
   <button id="save-person">Salvar</button>
-  <ul id="person-list"></ul>
-  
+  <table>
+    <tr>
+      <th>Nome</th>
+      <th>Idade</th>
+    </tr>
+    <tr></tr>
+    <tr></tr>
+  </table>
   <script src="script.js"></script>
 </body>
 </html>
