cria botao e logica para editar uma linha da tabela

--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
     </label>
     <button type="submit"  id="save-person">Salvar</button>
   </form>
-  <table id="person-table">
-    <tr>
-      <th>Nome</th>
-      <th>Idade</th>
-    </tr>
+  <table>
+    <thead>
+      <tr>
+        <th>Nome</th>
+        <th>Idade</th>
+      </tr>
+    </thead>
+    <tbody id="person-table"></tbody>
   </table>
   <script src="script.js"></script>
 </body>
