adiciona logica para inverter a ordenacao da lista

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <thead>
       <tr>
         <th>Nome</th>
-        <th>Idade</th>
+        <th id="age-header">Idade ˅</th>
       </tr>
     </thead>
     <tbody id="person-table"></tbody>
