--- a/index.html
+++ b/index.html
@@ -5,32 +5,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>person-list</title>
 </head>
 <body>
+  <main>
   <header>
     <h1>Lista de pessoas</h1>
   </header>
   <form id="person-form" onsubmit="return false">
     <label> 
       Nome:
-      <input type="text" id="name" placeholder="nome" >
+      <input type="text" id="name" class="form-control" placeholder="nome" >
     </label>
     <label>
       Idade:
-      <input type="number" id="age" placeholder="idade" >
+      <input type="number" id="age" class="form-control" placeholder="idade" >
     </label>
-    <button type="submit"  id="save-person">Salvar</button>
+    <button type="submit" class="btn btn-primary" id="save-person">Salvar</button>
   </form>
-  <table>
-    <thead>
+  <table class="table table-sm">
+    <thead class="thead-dark">
       <tr>
-        <th>Nome</th>
-        <th id="age-header">Idade ˅</th>
+        <th scope="col" >Nome</th>
+        <th scope="col" id="age-header">Idade ˅</th>
       </tr>
     </thead>
     <tbody id="person-table"></tbody>
   </table>
   <script src="script.js"></script>
+</main>
 </body>
 </html>
